# Handy-Android

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  README.md  SPEC.md  draft.md  flake.nix  package.json
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: android-ci.yml  android-release.yml  build.yml  code-quality.yml  main-build.yml  nix-check.yml  test.yml
.opencode/goals/: state.json  state.json.ledger.jsonl
handy-android/: .gitignore  ARCHITECTURE.md  BACKENDS.md  BUILD.md  KEYSTORE.md  LIMPIA.md  MIGRATION_PLAN_MD3.md  PC_HANDY_REFERENCE.md  PROGRESS.md  README.md  SPEC.md  SPRINT_29_PLAN.md  TEST_MATRIX.md  gradle.properties  licenses.md  settings.gradle.kts
handy-android/.github/workflows/: android-test.yml
handy-android/app/: build.gradle.kts  proguard-rules.pro
handy-android/app/src/main/: AndroidManifest.xml
handy-android/gradle/: libs.versions.toml
handy-android/gradle/wrapper/: gradle-wrapper.properties
handy-android/handy-core/: Cargo.toml  build.rs
handy-android/handy-core/src/: engine.rs  idle_watcher.rs  jni_bridge.rs  jni_callback.rs  lib.rs
handy-android/handy-core/src/audio/: capture.rs  mod.rs  pipeline.rs  resampler.rs  vad.rs  vad_silero.rs
handy-android/handy-core/src/history/: manager.rs  mod.rs  retry.rs
handy-android/handy-core/src/model/: info.rs  manager.rs  mod.rs
handy-android/handy-core/src/transcription/: engine.rs  mod.rs  periodic.rs  router.rs  worker.rs
handy-android/handy-core/transcribe-rs/: Cargo.toml  branches.txt
handy-android/handy-core/transcribe-rs/examples/: parakeet_cli.rs
handy-android/handy-core/transcribe-rs/src/: lib.rs
handy-android/handy-core/transcribe-rs/src/engines/: mod.rs
handy-android/handy-core/transcribe-rs/src/engines/parakeet/: engine.rs  mel_128.rs  mod.rs  model.rs  model_180m.rs
handy-android/handy-core/transcribe-rs/tests/: parakeet.rs
handy-android/metadata/: com.handy.app.yml
handy-android/scripts/: RECONNECT_DEVICE.md  adb_test_flow.sh  build-rust.sh  capture_history.sh  capture_ime.sh  capture_onboarding.sh  check_device.sh
scripts/: check-nix-deps.ts  gen_catalog.py
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: actions.rs  cli.rs  clipboard.rs  lib.rs  main.rs  overlay.rs  portable.rs  settings.rs  shortcut.rs  signal_handle.rs  transcription_coordinator.rs  tray.rs
src-tauri/src/audio_toolkit/: mod.rs  text.rs
src-tauri/src/audio_toolkit/audio/: mod.rs  recorder.rs  resampler.rs
src-tauri/src/catalog/: catalog.json
src-tauri/src/commands/: audio.rs  history.rs  mod.rs  models.rs
src-tauri/src/managers/: audio.rs  history.rs  model.rs  transcription.rs  transcription_mock.rs
src-tauri/src/shortcut/: handy_keys.rs  mod.rs
src/components/: Sidebar.tsx
src/components/model-selector/: ModelDropdown.tsx  ModelSelector.tsx
src/components/onboarding/: ModelCard.tsx  Onboarding.tsx
src/components/settings/: CustomWords.tsx  GlobalShortcutInput.tsx  HandyKeysShortcutInput.tsx  LanguageSelector.tsx  ThemeSelector.tsx
src/components/settings/about/: AboutSettings.tsx
src/i18n/: languages.ts
src/lib/constants/: languages.ts
src/lib/types/: events.ts
src/lib/utils/: theme.ts
src/stores/: settingsStore.ts
src/styles/: theme.css
(+192 files in other folders)
