[package]
name = "handy-core"
version = "0.1.0"
edition = "2021"
description = "Handy for Android - Rust core engine (JNI bridge)"

[lib]
crate-type = ["cdylib"]
name = "handy_core"

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# TODO: add in Sprint 1
# transcribe-cpp = "0.1"
# rubato = "0.16"
# vad-rs = { git = "https://github.com/snakers4/silero-vad" }
# rusqlite = { version = "0.37", features = ["bundled"] }
# reqwest = { version = "0.12", features = ["json"] }
# hound = "3.5"
# aaudio-sys = "0.3"
# rayon = "1"
# tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
