[package]
name = "handy-core"
version = "0.1.0"
edition = "2021"
description = "Handy for Android - Rust core engine (JNI bridge)"

[lib]
crate-type = ["cdylib"]
name = "handy_core"

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Audio capture (AAudio on Android)
aaudio-sys = "0.1.0"

# Sample rate conversion
rubato = "0.16"

# History persistence (SQLite)
rusqlite = { version = "0.37", features = ["bundled"] }

# HTTP downloads (for model downloads)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# WAV file I/O
hound = "3.5"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "fs", "io-util"] }

# Parallelism
rayon = "1"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique IDs
uuid = { version = "1", features = ["v4"] }

# Speech-to-text inference (GGML/Whisper via whisper.cpp)
transcribe-cpp = { version = "0.1.3", default-features = false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
