[package]
name = "transcribe-rs"
version = "0.1.4"
edition = "2021"
description = "A simple library to help you transcribe audio"
license = "MIT"
repository = "https://github.com/cjpais/transcribe-rs"

[dependencies]
hound = "3.5.1"
log = "0.4.28"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["nnapi", "xnnpack", "load-dynamic"] }
env_logger = "0.10.0"
regex = "1.11.2"
thiserror = "2.0.16"
once_cell = "1.21.3"
rustfft = "6.4.1"
tokio = { version = "1.47.1", features = ["rt"] }
async-openai = { version = "0.29.3" }
async-trait = { version = "0.1.89" }
derive_builder = { version = "0.20.2" }
zeroize = "1"

# The whisper engine is optional: it needs Metal/Vulkan toolchains to build
# and is not used by the Android app (which only uses parakeet).
[features]
default = []
whisper = ["dep:whisper-rs"]

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"], optional = true }

